Fix the spacing

--- a/VueJs.Picnic.CSharp/ClientApp/assets/custom_picnic.scss
+++ b/VueJs.Picnic.CSharp/ClientApp/assets/custom_picnic.scss
@@ -180,7 +180,7 @@ article.card {
       }
 
       span.collapsed {
-        color: transparent;  width:0px !important;
+        display:none !important;
       }
     }
   }
