--- a/VueJs.PicnicTable.CSharp/ClientApp/assets/custom_picnic.scss
+++ b/VueJs.PicnicTable.CSharp/ClientApp/assets/custom_picnic.scss
@@ -184,7 +184,7 @@ article.card {
       }
 
       span.collapsed {
-        color: transparent;  width:0px !important;
+        display:none !important;
       }
     }
   }
